syntax = "proto3";

package types;

option java_multiple_files = true;
option java_outer_classname = "Types";
option java_package = "com.collect.types";
option go_package = "./types";

import "device-config.proto";
import "parsing-config.proto";

enum Operation {
  Invalid_Operation = 0;
  _Get = 1;
  _Map = 2;
  _Table = 3;
}

message PollConfig {
  string name = 1;
  string vendor = 2;
  string series = 3;
  string family = 4;
  string software = 5;
  string hardware = 6;
  string version = 7;
  repeated string groups = 8;
  string what = 9;
  Operation operation = 10;
  Protocol  protocol = 11;
  ParsingConfig parsing = 12;
  int64 cadence = 13;
  int64 timeout = 14;
}

message Job {
  string error = 1;
  bytes result = 2;
  int64 started = 3;
  int64 ended = 4;
  int64 cadence = 5;
  int64 timeout = 6;
  string device_id = 7;
  string host_id = 8;
  string poll_name = 9;
  DeviceServiceInfo iService = 10;
  DeviceServiceInfo pService = 11;
}

message CMap {
  map<string, bytes> data = 1;
}

message CTable {
  map<int32, string> columns = 1;
  map<int32, CRow> rows = 2;
}

message CRow {
  map<int32, bytes> data = 1;
}